--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,6 +12,8 @@ variables:
     value: '7.0.x'
   - name: WORKING_DIRECTORY
     value: 'src\Kooco.Pikachu.Blazor'
+  - name: AZURE_WEBAPP_NAME_PRODUCTION
+    value: 'pikachu-production'
 
 jobs:
 - job: build
@@ -24,10 +26,13 @@ jobs:
       version: ${{ variables.DOTNET_CORE_VERSION }}
   - script: dotnet restore "${{ variables.WORKING_DIRECTORY }}"
     displayName: 'Restore'
+
   - script: dotnet build "${{ variables.WORKING_DIRECTORY }}" --configuration ${{ variables.CONFIGURATION }} --no-restore
     displayName: 'Build'
+
   - script: dotnet test "${{ variables.WORKING_DIRECTORY }}" --no-build
     displayName: 'Test'
+
   - script: |
       dotnet tool install --global dotnet-ef
       cd src/Kooco.Pikachu.EntityFrameworkCore
@@ -35,6 +40,7 @@ jobs:
     displayName: 'Run EF Core Migrations'
   - script: dotnet publish "${{ variables.WORKING_DIRECTORY }}" --configuration ${{ variables.CONFIGURATION }} --no-build --output "${{ variables.AZURE_WEBAPP_PACKAGE_PATH }}"
     displayName: 'Publish'
+
   - task: PublishBuildArtifacts@1
     inputs:
       pathtoPublish: '${{ variables.AZURE_WEBAPP_PACKAGE_PATH }}'
@@ -55,4 +61,18 @@ jobs:
       appName: ${{ variables.AZURE_WEBAPP_NAME }}
       package: $(Pipeline.Workspace)/webapp
     
-  
+
+- job: deployProd
+  pool:
+    vmImage: 'windows-latest'
+  dependsOn: deploy
+  condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/main'))
+  steps:
+  - download: current
+    artifact: 'webapp'
+  - task: AzureWebApp@1
+    inputs:
+      azureSubscription: 'Azure 訂用帳戶 1 (3817e394-8d25-45fe-af63-3f5f209dedc8)'
+      appType: 'webApp'
+      appName: ${{ variables.AZURE_WEBAPP_NAME_PRODUCTION }}
+      package: $(Pipeline.Workspace)/webapp
