--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -64,16 +64,7 @@ jobs:
       fileType: 'json'
       targetFiles: 'appsettings.json'
       
-  # - task: PowerShell@2
-  #   inputs:
-  #     targetType: 'inline'
-  #     script: |
-  #       Get-ChildItem '${{ variables.AZURE_WEBAPP_PACKAGE_PATH }}'
 
-  #       write-host 'webapp details'
-  #       Get-ChildItem '${{ variables.AZURE_WEBAPP_PACKAGE_PATH }}/webapp'
-  #       write-host 'pipeline location'
-  #       Get-ChildItem '$(Pipeline.Workspace)/webapp'
   - task: AzureWebApp@1
     inputs:
       azureSubscription: 'Azure 訂用帳戶 1 (3817e394-8d25-45fe-af63-3f5f209dedc8)'
@@ -85,8 +76,8 @@ jobs:
 - job: deployProd
   pool:
     vmImage: 'windows-latest'
-  # variables:
-  #   - group: PROD-VG
+  variables:
+    - group: PROD-VG
   dependsOn: deploy
   condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/main'))
   steps:
