--- a/src/Kooco.Pikachu.Application/Kooco.Pikachu.Application.csproj
+++ b/src/Kooco.Pikachu.Application/Kooco.Pikachu.Application.csproj
@@ -30,6 +30,7 @@
 	  <PackageReference Include="Azure.Storage.Blobs" Version="12.17.0" />
 	  <PackageReference Include="Hangfire.Core" Version="1.8.6" />
 	  <PackageReference Include="MiniExcel" Version="1.31.2" />
+	  <PackageReference Include="RestSharp" Version="110.2.0" />
     <PackageReference Include="Volo.Abp.Account.Application" Version="7.3.2" />
     <PackageReference Include="Volo.Abp.Identity.Application" Version="7.3.2" />
     <PackageReference Include="Volo.Abp.PermissionManagement.Application" Version="7.3.2" />
