--- a/src/Kooco.Pikachu.Blazor/appsettings.json
+++ b/src/Kooco.Pikachu.Blazor/appsettings.json
@@ -32,6 +32,7 @@
     "HashIV": "v77hoKGq4kWxNNIS",
     "MerchantID": "2000132",
     "E-MAPApi": "https://logistics.ecpay.com.tw/Home/Family",
-    "LogisticApi": "https://logistics-stage.ecpay.com.tw/Express/Create"
+    "LogisticApi": "https://logistics-stage.ecpay.com.tw/Express/Create",
+    "InvoiceApi": "https://einvoice-stage.ecpay.com.tw/B2CInvoice/Issue"
   }
 }
