--- a/src/Kooco.Pikachu.Blazor/appsettings.json
+++ b/src/Kooco.Pikachu.Blazor/appsettings.json
@@ -34,7 +34,7 @@
     "E-MAPApi": "https://logistics.ecpay.com.tw/Home/Family",
     "LogisticApi": "https://logistics-stage.ecpay.com.tw/Express/Create",
     "InvoiceApi": "https://einvoice-stage.ecpay.com.tw/B2CInvoice/Issue",
-    "CreditNoteApi": "https://einvoice-stage.ecpay.com.tw/B2CInvoice/AllowanceByCollegiate",
+    "CreditNoteApi": "https://einvoice-stage.ecpay.com.tw/B2CInvoice/Allowance",
     "VoidInvoiceApi": "https://einvoice-stage.ecpay.com.tw/B2CInvoice/Invalid"
   }
 }
