--- a/src/Kooco.Pikachu.Application/Kooco.Pikachu.Application.csproj
+++ b/src/Kooco.Pikachu.Application/Kooco.Pikachu.Application.csproj
@@ -32,6 +32,7 @@
 	  <PackageReference Include="MiniExcel" Version="1.31.2" />
 	  <PackageReference Include="RestSharp" Version="110.2.0" />
     <PackageReference Include="Volo.Abp.Account.Application" Version="7.3.2" />
+    <PackageReference Include="Volo.Abp.BackgroundJobs.HangFire" Version="7.3.0" />
     <PackageReference Include="Volo.Abp.Identity.Application" Version="7.3.2" />
     <PackageReference Include="Volo.Abp.PermissionManagement.Application" Version="7.3.2" />
     <PackageReference Include="Volo.Abp.TenantManagement.Application" Version="7.3.2" />
