--- a/src/Kooco.Pikachu.Blazor/Kooco.Pikachu.Blazor.csproj
+++ b/src/Kooco.Pikachu.Blazor/Kooco.Pikachu.Blazor.csproj
@@ -3,7 +3,7 @@
   <Import Project="..\..\common.props" />
 
   <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <GenerateBindingRedirectsOutputType>true</GenerateBindingRedirectsOutputType>
@@ -25,48 +25,48 @@
 
       <PackageReference Include="Blazored.TextEditor" Version="1.1.0" />
 
-      <PackageReference Include="Blazorise.LoadingIndicator" Version="1.3.1" />
+      <PackageReference Include="Blazorise.LoadingIndicator" Version="1.5.2" />
 
-      <PackageReference Include="Hangfire.Core" Version="1.8.6" />
+      <PackageReference Include="Hangfire.Core" Version="1.8.12" />
 
-      <PackageReference Include="Hangfire.SqlServer" Version="1.8.6" />
+      <PackageReference Include="Hangfire.SqlServer" Version="1.8.12" />
 
-      <PackageReference Include="HtmlAgilityPack" Version="1.11.59" />
+      <PackageReference Include="HtmlAgilityPack" Version="1.11.60" />
 
-      <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.10">
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.4">
         <PrivateAssets>all</PrivateAssets>
         <!-- <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets> -->
       </PackageReference>
-      <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="7.0.10" />
-      <PackageReference Include="Serilog.AspNetCore" Version="7.0.0" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="8.0.4" />
+      <PackageReference Include="Serilog.AspNetCore" Version="8.0.1" />
         <PackageReference Include="Serilog.Sinks.Async" Version="1.5.0" />
-        <PackageReference Include="Volo.Abp.AspNetCore.Mvc.UI.Theme.Basic" Version="7.3.2" />
+        <PackageReference Include="Volo.Abp.AspNetCore.Mvc.UI.Theme.Basic" Version="8.1.1" />
 
-        <PackageReference Include="Blazorise" Version="1.3.1" />
-        <PackageReference Include="Blazorise.Icons.FontAwesome" Version="1.3.1" />
-        <PackageReference Include="Blazorise.Snackbar" Version="1.3.1" />
-        <PackageReference Include="Blazorise.Components" Version="1.3.1" />
-        <PackageReference Include="Blazorise.Bootstrap5" Version="1.3.1" />
-        <PackageReference Include="Blazorise.DataGrid" Version="1.3.1" />
-        <PackageReference Include="Blazorise.RichTextEdit" Version="1.3.1" />
-        <PackageReference Include="Blazorise.AntDesign" Version="1.3.1" />
-        <PackageReference Include="Volo.Abp.AspNetCore.Mvc.UI.Theme.LeptonXLite" Version="2.3.2" />
-        <PackageReference Include="Volo.Abp.AspNetCore.Components.Server.LeptonXLiteTheme" Version="2.3.2" />
-        <PackageReference Include="Volo.Abp.BackgroundJobs.HangFire" Version="7.3.0" />
-        <PackageReference Include="Volo.Abp.HangFire" Version="7.3.0" />
+        <PackageReference Include="Blazorise" Version="1.5.2" />
+        <PackageReference Include="Blazorise.Icons.FontAwesome" Version="1.5.2" />
+        <PackageReference Include="Blazorise.Snackbar" Version="1.5.2" />
+        <PackageReference Include="Blazorise.Components" Version="1.5.2" />
+        <PackageReference Include="Blazorise.Bootstrap5" Version="1.5.2" />
+        <PackageReference Include="Blazorise.DataGrid" Version="1.5.2" />
+        <PackageReference Include="Blazorise.RichTextEdit" Version="1.5.2" />
+        <PackageReference Include="Blazorise.AntDesign" Version="1.5.2" />
+        <PackageReference Include="Volo.Abp.AspNetCore.Mvc.UI.Theme.LeptonXLite" Version="3.1.0-rc.2" />
+        <PackageReference Include="Volo.Abp.AspNetCore.Components.Server.LeptonXLiteTheme" Version="3.1.0-rc.2" />
+        <PackageReference Include="Volo.Abp.BackgroundJobs.HangFire" Version="8.1.1" />
+        <PackageReference Include="Volo.Abp.HangFire" Version="8.1.1" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Kooco.Pikachu.Application\Kooco.Pikachu.Application.csproj" />
     <ProjectReference Include="..\Kooco.Pikachu.HttpApi\Kooco.Pikachu.HttpApi.csproj" />
     <ProjectReference Include="..\Kooco.Pikachu.EntityFrameworkCore\Kooco.Pikachu.EntityFrameworkCore.csproj" />
-    <PackageReference Include="Volo.Abp.Autofac" Version="7.3.2" />
-    <PackageReference Include="Volo.Abp.Swashbuckle" Version="7.3.2" />
-    <PackageReference Include="Volo.Abp.AspNetCore.Serilog" Version="7.3.2" />
-    <PackageReference Include="Volo.Abp.Account.Web.OpenIddict" Version="7.3.2" />
-    <PackageReference Include="Volo.Abp.Identity.Blazor.Server" Version="7.3.2" />
-    <PackageReference Include="Volo.Abp.TenantManagement.Blazor.Server" Version="7.3.2" />
-    <PackageReference Include="Volo.Abp.SettingManagement.Blazor.Server" Version="7.3.2" />
+    <PackageReference Include="Volo.Abp.Autofac" Version="8.1.1" />
+    <PackageReference Include="Volo.Abp.Swashbuckle" Version="8.1.1" />
+    <PackageReference Include="Volo.Abp.AspNetCore.Serilog" Version="8.1.1" />
+    <PackageReference Include="Volo.Abp.Account.Web.OpenIddict" Version="8.1.1" />
+    <PackageReference Include="Volo.Abp.Identity.Blazor.Server" Version="8.1.1" />
+    <PackageReference Include="Volo.Abp.TenantManagement.Blazor.Server" Version="8.1.1" />
+    <PackageReference Include="Volo.Abp.SettingManagement.Blazor.Server" Version="8.1.1" />
   </ItemGroup>
 
   <ItemGroup>
