--- a/src/Kooco.Pikachu.Blazor/appsettings.Development.json
+++ b/src/Kooco.Pikachu.Blazor/appsettings.Development.json
@@ -27,9 +27,12 @@
     },
     "EntryUrl": "https://koocopikachustore.azurewebsites.net/",
   "EcPay": {
-    "HashKey": "5294y06JbISpM5x9",
-    "HashIV": "v77hoKGq4kWxNNIS",
-    "MerchantID": "2000132",
+    //"HashKey": "5294y06JbISpM5x9",
+    //"HashIV": "v77hoKGq4kWxNNIS",
+    //"MerchantID": "2000132",
+    "HashKey": "MqPualB34qDhv6wO",
+    "HashIV": "9oZiHmM977DkgLrl",
+    "MerchantID": "3252187",
     "E-MAPApi": "https://logistics.ecpay.com.tw/Home/Family",
     "LogisticApi": "https://logistics-stage.ecpay.com.tw/Express/Create",
     "InvoiceApi": "https://einvoice-stage.ecpay.com.tw/B2CInvoice/Issue",
